--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 <body>
     <header>
+        
         <div class="logo">
             <img src="images/undraw_transfer_money_re_6o1h.svg" alt="">
         </div>
@@ -24,6 +25,8 @@
             <a href="#">Home</a>
             <a href="#about">About Us</a>
             <a href="#contact">Contact</a>
+            <span class="menu-toggle" onclick="toggleMenu()">☰</span>
+
         </nav>
     </header>
 
@@ -111,7 +114,7 @@
         <p>&copy; 2024 Wisani Cash Loan. All rights reserved.</p>
     </div>
 </footer>
-
+<script src="script.js"></script>
 </body>
 
 </html>
