just added php files

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<?php
+<!-- <?php
 @include 'config.php';
 
 if (isset($_POST['submit'])) {
@@ -20,7 +20,7 @@ if (isset($_POST['submit'])) {
         $message[] = 'Thank you for visiting our website. We will be in touch.';
     }
 }
-?>
+?> -->
 
 
 <!DOCTYPE html>
