achanged php files to txt files

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ if (isset($_POST['submit'])) {
             <button>GET STARTED</button>
         </div>
         <div class="form-section">
-    <?php
+    <!-- <?php
         if(isset($message)){
             foreach($message as $msg){
                 echo '<div class="message-box">
@@ -76,7 +76,7 @@ if (isset($_POST['submit'])) {
                       </div>';
             }
         }
-    ?>
+    ?> -->
             <form action="" method="post">
                 <h2>Request a callback</h2>
                 <input type="text" placeholder="Enter your name"name="name"required>
