--- a/config.html
+++ b/config.html
@@ -1,4 +1,4 @@
-<?php
+<!-- <?php
 $conn = mysqli_connect('localhost', 'root', '', 'wisani_cashloan_db') or die('connection has failed');
 
-?>
+?> -->
