--- a/data.html
+++ b/data.html
@@ -1,4 +1,4 @@
-<?php
+<!-- <?php
 @include 'config.php';
 
 if (isset($_POST['submit'])) {
@@ -20,4 +20,4 @@ if (isset($_POST['submit'])) {
         $message[] = 'Thank you for visiting our website. We will be in touch.';
     }
 }
-?>
+?> -->
