--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ if (isset($_POST['submit'])) {
         <div class="header-container">
             <div class="logo-title">
                 <div class="logo">
-                    <img src="images/undraw_transfer_money_re_6o1h.svg" alt="Wisani Cash Loan Logo">
+                    <img src="images/LogoMaker_03082022_162719.jpeg" alt="Wisani Cash Loan Logo">
                 </div>
                 <h2><span class="name">Wisani</span> Cash Loan</h2>
             </div>
